<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.github.gbenroscience</groupId>
    <artifactId>parser-ng</artifactId>
    <version>0.1.5</version>
    <packaging>jar</packaging>
    
    <name>ParserNG</name>
    <description>Rich and Performant, Cross Platform Java Library(100% Java)... Now allows the differentiation function to be differentiated with
    respect to any variable(not just x). A command line tool(parser.cmd.ParserCmd) has also be added. Its still in its infancy; but it works</description>
    <url>https://github.com/gbenroscience/ParserNG</url>

    <licenses>
        <license>
            <name>The Apache Software License, Version 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Gbemiro Jiboye</name>
            <email>gbenroscience@yahoo.com</email>
            <organization>N.A</organization>
            <organizationUrl></organizationUrl>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/gbenroscience/ParserNG.git</connection>
        <developerConnection>scm:git:ssh://github.com/gbenroscience/ParserNG.git</developerConnection>
        <url>http://github.com/gbenroscience/ParserNG/tree/master</url>
    </scm>
    <dependencies>
<!--        <dependency>
            <groupId>
                com.google.code.gson
            </groupId>
            <artifactId>gson</artifactId>
            <version>2.8.6</version>
        </dependency>-->
    </dependencies>
   
   
    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>


   
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <configuration>
                    <additionalparam>-Xdoclint:none</additionalparam>
                    <source>8</source>
                    <detectJavaApiLink>false</detectJavaApiLink>
                </configuration>
                <version>2.9.1</version>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>1.5</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
   
   
    <properties>
        <doclint>none</doclint>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
</project>